фикс уведомлений и суперлайков
